forth/test/fail/test_error_arg_arity_hint.af
fun: err_arg_hint_callee { -- err } end

fun: err_arg_hint_fail { -- err }
  err_arg_hint_callee
  nop
end
